添加了头像上传功能和头像显示功能

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-resource": "^1.5.2",
     "vue-social-captcha": "^0.1.1",
     "vuex": "^3.6.2"
