--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "url-loader": "^4.1.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-image-crop-upload": "^3.0.3",
